--- a/styles/global.css
+++ b/styles/global.css
@@ -2,6 +2,9 @@ html,
 body {
   padding: 0;
   margin: 0;
+  width: 100vw;
+  height: 100vw;
+  overflow: hidden;
   font-family:
     Inter,
     -apple-system,
